<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_vietnam"
        android:title="@string/action_viet_nam"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item android:id="@+id/action_english"
        android:title="@string/action_english"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item android:id="@+id/action_logout"
        android:title="@string/action_logout"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never"/>
</menu>