<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_san_pham">

    <fragment
        android:id="@+id/nav_nguyen_lieu"
        android:name="com.example.second.ui.NguyenLieu.FragmentNguyenLieu"
        android:label="@string/menu_nguyen_lieu"
        tools:layout="@layout/fragment_nguyen_lieu" />

    <fragment
        android:id="@+id/nav_san_pham"
        android:name="com.example.second.ui.SanPham.FragmentSanPham"
        android:label="@string/menu_product"
        tools:layout="@layout/fragment_san_pham" />

    <fragment
        android:id="@+id/nav_khach_hang"
        android:name="com.example.second.ui.KhachHang.FragmentKhachHang"
        android:label="@string/menu_khach_hang"
        tools:layout="@layout/fragment_khach_hang" />
    <fragment
        android:id="@+id/nav_my_profile"
        android:name="com.example.second.ui.MyProfile.FragmentMyProfile"
        android:label="@string/menu_my_profile"
        tools:layout="@layout/fragment_my_profile" />

</navigation>